--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VDBC - Virtual Dragon Boat Coach</title>
+    <title>VDBC</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
     <header>
-        <img src="https://static.wixstatic.com/media/90c0a3_82c43324b646429ea5117b9c10018156~mv2.png/v1/crop/x_0,y_0,w_8769,h_6859/fill/w_414,h_324,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/DB_Logo_2017_Maroon_LightBG%20(1).png" alt="VDBC Logo" class="logo">
         <nav>
             <ul>
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
                 <li><a href="{{ url_for('resources') }}">Resources</a></li>
+                <li><a href="{{ url_for('logout') }}">Logout</a></li>
             </ul>
         </nav>
     </header>
@@ -21,7 +21,7 @@
         {% block content %}{% endblock %}
     </main>
     <footer>
-        <p>&copy; 2025 VDBC. All rights reserved.</p>
+        <p>&copy; 2023 VDBC. All rights reserved.</p>
     </footer>
 </body>
 </html>
