--- a/src/templates/login.html
+++ b/src/templates/login.html
@@ -1,25 +1,30 @@
 {% extends "baselogin.html" %}
 
 {% block content %}
-<section class="home-section">
-    <h1>Login to VDBC</h1>
-    <p>Please enter your username and password to sign in.</p>
-    <form action="/login" method="POST">
-        <div class="form-group">
-            <label for="username">Username:</label>
-            <input type="text" id="username" name="username" placeholder="Enter your username" required>
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
-        </div>
-        <button type="submit">Sign In</button>
-    </form>
-    <p>Don't have an account? <a href="https://app.opencap.ai/register-nmbl" class="button">Create an Account</a></p>
-    {% if error %}
-        <p class="alert alert-error">{{ error }}</p>
-    {% elif success %}
-        <p class="alert alert-success">{{ success }}</p>
-    {% endif %}
-</section>
+<div class="split-container">
+    <section class="home-section-login">
+        <h1>Login to VDBC</h1>
+        <p>Please enter your username and password to sign in.</p>
+        <form action="/login" method="POST">
+            <div class="form-group">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" placeholder="Enter your username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" placeholder="Enter your password" required>
+            </div>
+            <button type="submit">Sign In</button>
+        </form>
+        <p>Don't have an account? <a href="https://app.opencap.ai/register-nmbl" class="button">Create an Account</a></p>
+        {% if error %}
+            <p class="alert alert-error">{{ error }}</p>
+        {% elif success %}
+            <p class="alert alert-success">{{ success }}</p>
+        {% endif %}
+    </section>
+    <section class="club-image">
+        <img src="https://static.wixstatic.com/media/90c0a3_dd99891d45784696aec677c261b7b019~mv2.jpg" alt="Boat Club Image" width="150%" height="auto">
+    </section>
+</div>
 {% endblock %}
