--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -13,6 +13,7 @@
                 <li><a href="{{ url_for('home') }}">Home</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
                 <li><a href="{{ url_for('resources') }}">Resources</a></li>
+                <li><a href="{{ url_for('coach') }}">Coach</a></li>
                 {% if 'token' in session %}
                     <li><a href="{{ url_for('logout') }}">Logout</a></li>
                 {% endif %}
