Improved workflow and added technique analysis report

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,7 +5,7 @@
     <h1>Welcome to VDBC</h1>
     <p>Enter the session URL to download and process the corresponding session data.</p>
     
-    <form action="/process-files" method="POST" id="processForm">
+    <form action="/start-analyze" method="POST" id="processForm">
         <div class="form-group">
             <label for="session-url">Session URL:</label>
             <input type="text" id="session-url" name="session_url" placeholder="Enter the session URL" required>
@@ -14,45 +14,7 @@
             <label for="trial-name">Trial Name:</label>
             <input type="text" id="trial-name" name="trial_name" placeholder="Enter the trial name" required>
         </div>
-        <div class="form-group">
-            <label for="angle-name">Angle Name:</label>
-            <select id="angle-name" name="angle_name" required>
-                <option value="pelvis_tilt">Pelvis Tilt</option>
-                <option value="pelvis_list">Pelvis List</option>
-                <option value="pelvis_rotation">Pelvis Rotation</option>
-                <option value="pelvis_tx">Pelvis TX</option>
-                <option value="pelvis_ty">Pelvis TY</option>
-                <option value="pelvis_tz">Pelvis TZ</option>
-                <option value="hip_flexion_r">Hip Flexion Right</option>
-                <option value="hip_adduction_r">Hip Adduction Right</option>
-                <option value="hip_rotation_r">Hip Rotation Right</option>
-                <option value="knee_angle_r">Knee Angle Right</option>
-                <option value="ankle_angle_r">Ankle Angle Right</option>
-                <option value="subtalar_angle_r">Subtalar Angle Right</option>
-                <option value="mtp_angle_r">MTP Angle Right</option>
-                <option value="hip_flexion_l">Hip Flexion Left</option>
-                <option value="hip_adduction_l">Hip Adduction Left</option>
-                <option value="hip_rotation_l">Hip Rotation Left</option>
-                <option value="knee_angle_l">Knee Angle Left</option>
-                <option value="ankle_angle_l">Ankle Angle Left</option>
-                <option value="subtalar_angle_l">Subtalar Angle Left</option>
-                <option value="mtp_angle_l">MTP Angle Left</option>
-                <option value="lumbar_extension">Lumbar Extension</option>
-                <option value="lumbar_bending">Lumbar Bending</option>
-                <option value="lumbar_rotation">Lumbar Rotation</option>
-                <option value="arm_flex_r">Arm Flex Right</option>
-                <option value="arm_add_r">Arm Add Right</option>
-                <option value="arm_rot_r">Arm Rot Right</option>
-                <option value="elbow_flex_r">Elbow Flex Right</option>
-                <option value="pro_sup_r">Pro Sup Right</option>
-                <option value="arm_flex_l">Arm Flex Left</option>
-                <option value="arm_add_l">Arm Add Left</option>
-                <option value="arm_rot_l">Arm Rot Left</option>
-                <option value="elbow_flex_l">Elbow Flex Left</option>
-                <option value="pro_sup_l">Pro Sup Left</option>
-            </select>
-        </div>
-        <button type="submit">Submit</button>
+        <button type="submit">Start Analysis</button>
     </form>
 
     <div id="loadingMessage" style="display:none;">
