--- a/src/templates/baselogin.html
+++ b/src/templates/baselogin.html
@@ -14,6 +14,12 @@
                 <img src="https://static.wixstatic.com/media/90c0a3_82c43324b646429ea5117b9c10018156~mv2.png/v1/crop/x_0,y_0,w_8769,h_6859/fill/w_345,h_270,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/DB_Logo_2017_Maroon_LightBG%20(1).png" alt="VDBC Logo" class="logo">
                 <span class="site-title">Virtual Dragon Boat Coach</span>
             </div>
+            <nav>
+                <ul>
+                    <li><a href="{{ url_for('about') }}"><i class="fas fa-info-circle"></i> About</a></li>
+                    <li><a href="{{ url_for('resources') }}"><i class="fas fa-book"></i> Resources</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
     <main>
